--- a/ls.html
+++ b/ls.html
@@ -4,4 +4,18 @@
 
 <body>
     It's work!
+
+<table>
+    <tr>
+        <td>col1</td>
+        <td>col2</td>
+    </tr>
+
+    <tr>
+        <td>row 2 col1</td>
+        <td>row 2 col2</td>
+    </tr>
+    
+</table>
+
 </body>
