one more file is added

--- a/ls.html
+++ b/ls.html
@@ -6,8 +6,9 @@
     It's work!
 
 <table>
+
     <tr>
-        <td>col1</td>
+        <td> <a href="ls2.html"> col1 <a/></td>
         <td>col2</td>
     </tr>
 
