--- a/ls2.html
+++ b/ls2.html
@@ -1,2 +1,13 @@
 
-it's work as well
+<body>
+    it's work as well
+
+    <script>
+
+
+        let bucket = document.createElement("label");
+        bucket.innerHTML = bucketCount;
+        document.body.appendChild(bucket);
+    </script>
+
+</body>
