--- a/ls.html
+++ b/ls.html
@@ -1,10 +1,31 @@
 <head>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
+    
+
 </head>
 
 <body>
     It's work!
 
+    <script>
+
+        bucketCount = 0;
+
+        let bucket = document.createElement("label");
+        bucket.innerHTML = bucketCount;
+        document.body.appendChild(bucket);
+
+        let btn = document.createElement("button");
+        btn.innerHTML = "Add";
+        btn.onclick = function () {
+            bucketCount++;
+            bucket.innerHTML = bucketCount;
+        };
+        document.body.appendChild(btn);
+    </script>
+
+    
 <table>
 
     <tr>
