without tg script

--- a/ls.html
+++ b/ls.html
@@ -1,5 +1,5 @@
 <head>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <!--script src="https://telegram.org/js/telegram-web-app.js"></script-->
 
     
 
@@ -29,8 +29,8 @@
 <table>
 
     <tr>
-        <td> <a href="ls2.html"> col1 <a/></td>
-        <td>col2</td>
+        <td> col1 </td>
+        <td> col2 </td>
     </tr>
 
     <tr>
