more books exm are added

--- a/ls.html
+++ b/ls.html
@@ -80,6 +80,31 @@
                 "id":"4",
                 "img":"pic/1035766630.webp",
                 "title":"Машина времени. Остров доктора Моро | Уэллс Герберт Джордж"
+            },
+            {
+                "id":"5",
+                "img":"pic/1035766643.webp",
+                "title":"Всадник без головы | Рид Томас Майн"
+            },
+            {
+                "id":"6",
+                "img":"pic/6040922162.webp",
+                "title":"Дети капитана Гранта"
+            },
+            {
+                "id":"7",
+                "img":"pic/1008874652.webp",
+                "title":"Путешествия Гулливера | Свифт Джонатан"
+            },
+            {
+                "id":"8",
+                "img":"pic/1028267155.webp",
+                "title":"Похищенный | Стивенсон Роберт Льюис"
+            },
+            {
+                "id":"9",
+                "img":"pic/1037906765.webp",
+                "title":"Возвращение Шерлока Холмса | Конан Дойл Артур"
             }
         ];
 
