--- a/ls.html
+++ b/ls.html
@@ -1,6 +1,6 @@
 <head>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>    
-    
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <style>
         html { font-size: 15px; }
         body { padding: 0.5rem; }
