--- a/ls.html
+++ b/ls.html
@@ -117,6 +117,7 @@
             
             var img = document.createElement('img');
             img.setAttribute('class', 'card-img');
+            img.setAttribute('loading', 'lazy');
             img.src = item.img;
             card.appendChild(img);
 
