item-counter css top right corner

--- a/ls.html
+++ b/ls.html
@@ -51,6 +51,12 @@
             border-radius:36px;
             border: none;
         }
+
+        .item-counter{
+            position: absolute;
+	        top: 0.5rem;
+            right: 1rem;
+        }
         
         @media (min-width: 200px) {
             .cards { grid-template-columns: repeat(2, 1fr); }
