add novaflow bot

--- a/altery.html
+++ b/altery.html
@@ -1,3 +1,7 @@
 <h1>Altery flow</h1>
 
-<button onclick="window.location.href='https://t.me/Cintila_bot/novaflow'" >Digital Assets</button>
+<a href = 'https://t.me/Cintila_bot/novaflow'>
+<h2>Digital Assets - the same bot</h2></a>
+
+<a href = 'https://t.me/novaflow_bot/novaflow'>
+    <h2>Digital Assets - novaflow bot</h2></a>
