assests have been added

--- a/altery.html
+++ b/altery.html
@@ -1,7 +1,9 @@
 <h1>Altery flow</h1>
 
 <a href = 'https://t.me/Cintila_bot/novaflow'>
-<h2>Digital Assets - ver1</h2></a>
+<h2>Digital Assets - ver1</h2>
+</a>
 
 <a href = 'https://t.me/novaflow_bot/novaflow'>
-    <h2>Digital Assets - ver2</h2></a>
+    <h2>Digital Assets - ver2</h2>
+</a>
