--- a/novaflow.html
+++ b/novaflow.html
@@ -1,1 +1,10 @@
 <h1>Novaflow flow</h1>
+
+<h2> TON </h2>
+<h2> USDT </h2>
+<h2> BTC </h2>
+<h2> ETH </h2>
+
+<a href = 'https://t.me/Cintila_bot/altery'>
+    <h1>Back to Altery</h1>
+</a>
