--- a/altery.html
+++ b/altery.html
@@ -1,9 +1,9 @@
 <h1>Altery flow</h1>
 
 <a href = 'https://t.me/Cintila_bot/novaflow'>
-<h2>Digital Assets - ver1</h2>
+<h2>Digital Assets - Launch Novaflow - ver1</h2>
 </a>
 
 <a href = 'https://t.me/novaflow_bot/novaflow'>
-    <h2>Digital Assets - ver2</h2>
+    <h2>Digital Assets - Launch Novaflow - ver2</h2>
 </a>
