--- a/novaflow.html
+++ b/novaflow.html
@@ -1,4 +1,4 @@
-<h1>Novaflow flow</h1>
+<h1>Novaflow - Crypto - Choose asset</h1>
 
 <h2> TON </h2>
 <h2> USDT </h2>
@@ -6,5 +6,5 @@
 <h2> ETH </h2>
 
 <a href = 'https://t.me/Cintila_bot/altery'>
-    <h1>Back to Altery</h1>
+    <h1>Launch Altery</h1>
 </a>
