--- a/novaflow.html
+++ b/novaflow.html
@@ -1,10 +1,59 @@
-<h1>Novaflow - Crypto - Choose asset</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cryptocurrency List</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 20px;
+        }
+        .crypto-list {
+            list-style-type: none;
+            padding: 0;
+        }
+        .crypto-item {
+            display: flex;
+            align-items: center;
+            padding: 10px;
+            background: white;
+            margin: 5px 0;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        .crypto-item i {
+            font-size: 30px;
+            margin-right: 10px;
+        }
+    </style>
+</head>
+<body>
 
-<h2> TON </h2>
-<h2> USDT </h2>
-<h2> BTC </h2>
-<h2> ETH </h2>
+<h1>Cryptocurrency List</h1>
+<ul class="crypto-list">
+    <li class="crypto-item">
+        <i class="fab fa-telegram-plane"></i>
+        <span>TON</span>
+    </li>
+    <li class="crypto-item">
+        <i class="fab fa-btc"></i>
+        <span>BTC</span>
+    </li>
+    <li class="crypto-item">
+        <i class="fab fa-ethereum"></i>
+        <span>ETH</span>
+    </li>
+</ul>
+
+
 
 <a href = 'https://t.me/Cintila_bot/altery'>
-    <h1>Launch Altery</h1>
+    <h1>Open Altery</h1>
 </a>
+
+</body>
+</html>
